--- a/package.json
+++ b/package.json
@@ -6,8 +6,11 @@
     "@material-ui/core": "^4.11.2",
     "@material-ui/icons": "^4.11.2",
     "@material-ui/lab": "^4.0.0-alpha.57",
+    "@types/autosuggest-highlight": "^3.1.1",
+    "autosuggest-highlight": "^3.1.1",
     "axios": "^0.21.0",
     "jsonwebtoken": "^8.5.1",
+    "lodash": "^4.17.20",
     "moment": "^2.29.1",
     "prop-types": "^15.7.2",
     "react": "^17.0.1",
@@ -24,6 +27,7 @@
     "@testing-library/user-event": "^12.1.10",
     "@types/jest": "^26.0.17",
     "@types/jsonwebtoken": "^8.5.0",
+    "@types/lodash": "^4.14.166",
     "@types/node": "^14.14.11",
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
