--- a/package.json
+++ b/package.json
@@ -18,6 +18,7 @@
     "react-hook-form": "^6.13.1",
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
+    "react-window": "^1.8.6",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
@@ -32,6 +33,7 @@
     "@types/react": "^17.0.0",
     "@types/react-dom": "^17.0.0",
     "@types/react-router-dom": "^5.1.6",
+    "@types/react-window": "^1.8.2",
     "prettier": "^2.2.1",
     "tslint": "^6.1.3",
     "tslint-config-prettier": "^1.18.0",
