--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "react-router-dom": "^5.2.0",
     "react-scripts": "4.0.1",
     "react-window": "^1.8.6",
+    "socket.io-client": "^3.1.1",
     "typescript": "^4.1.2",
     "web-vitals": "^0.2.4"
   },
